<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.groupproject.Controller.GroupActivities.NewGroup">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="68dp">

        <TextView
            android:id="@+id/createnewgroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_a_new_group"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="24sp" />

        <ImageButton
            android:id="@+id/eventpicbutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="TODO"
            android:src="@drawable/eventpic" />

        <TextView
            android:id="@+id/changephotoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="5dp"
            android:text="@string/click_to_change_event_photo"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/GroupNameEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/group_name"
            android:inputType="textPersonName" />


        <EditText
            android:id="@+id/GroupDescriptionEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/description"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/GroupTagsEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/tags"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/visibilityText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="5dp"
            android:text="@string/visibility"
            android:textColor="@android:color/black" />

        <Spinner
            android:id="@+id/GroupVisibilitySpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/createGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create"
            tools:layout_editor_absoluteX="148dp"
            tools:layout_editor_absoluteY="192dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
