<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_light_background"
    tools:layout_editor_absoluteY="81dp">

    <EditText
        android:id="@+id/InputName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="43dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="110dp"
        android:ems="10"
        android:hint="@string/Name"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/InputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="43dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="50dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputName" />

    <EditText
        android:id="@+id/InputPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="43dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="43dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/InputEmail" />

    <Button
        android:id="@+id/SignUp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="86dp"
        android:layout_marginEnd="46dp"
        android:layout_marginStart="46dp"
        android:layout_marginTop="90dp"
        android:background="@color/white"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/InputPassword" />

</android.support.constraint.ConstraintLayout>