<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_search_fragment">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/new_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="14dp"
        android:layout_marginEnd="18dp"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/cardview_light_background"
        app:rippleColor="@color/cardview_light_background"
        app:srcCompat="@drawable/ic_add_black_24dp" />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/radio_buttons">


        <RadioGroup
            android:id="@+id/rGroup"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal"
            android:weightSum="3">

            <RadioButton
                android:id="@+id/friendsRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoeuil"
                android:text="@string/friends" />

            <RadioButton
                android:id="@+id/eventsRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoeuil"
                android:text="@string/events" />

            <RadioButton
                android:id="@+id/groupsRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/segoeuil"
                android:text="@string/groups" />

        </RadioGroup>
    </FrameLayout>



    <android.support.v7.widget.RecyclerView
        android:id="@+id/search_fragment"

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/radio_buttons" />

</RelativeLayout>






