<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="6dp"
        android:layout_marginTop="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:orientation="vertical"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true">

            <ImageButton
                android:id="@+id/eventpic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                app:srcCompat="@drawable/eventpic"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/eventname_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/name"
                android:textColor="@android:color/black"
                tools:layout_editor_absoluteX="153dp"
                tools:layout_editor_absoluteY="16dp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/eventname_txt"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#85b6da"
                tools:layout_editor_absoluteX="153dp"
                tools:layout_editor_absoluteY="31dp"
                android:layout_alignParentLeft="true" />

            <TextView
                android:id="@+id/desc_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/description"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName" />

            <TextView
                android:id="@+id/startdate_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="@string/start_date"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/start_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:inputType="none" />

            <TextView
                android:id="@+id/enddate_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="End date"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/end_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:ems="10"
                android:focusable="false"
                android:inputType="none" />

            <TextView
                android:id="@+id/visibility_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="4dp"
                android:text="Visibility"
                android:textColor="@android:color/black" />

            <Spinner
                android:id="@+id/visibility"
                android:layout_width="match_parent"
                android:layout_height="35dp" />

            <Button
                android:id="@+id/savebutton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/save"
                android:textAllCaps="false"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

        </LinearLayout>

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>